Change view variable from receiver to requestor

--- a/app/views/mailers/invitations/create.text.haml
+++ b/app/views/mailers/invitations/create.text.haml
@@ -1,1 +1,1 @@
-= I18n.t('mailer.invitation.action.create', nickname: @invitation.receiver.nickname)
+= I18n.t('mailer.invitation.action.create', nickname: @invitation.requestor.nickname)
