--- a/app/views/mailers/invitations/create.html.haml
+++ b/app/views/mailers/invitations/create.html.haml
@@ -1,2 +1,2 @@
 %p
-  = I18n.t('mailer.invitation.action.create', nickname: @invitation.receiver.nickname)
+  = I18n.t('mailer.invitation.action.create', nickname: @invitation.requestor.nickname)
